--- a/neiro-module/src/components/SideBar/SideBar.scss
+++ b/neiro-module/src/components/SideBar/SideBar.scss
@@ -1,4 +1,4 @@
-$base-color: linear-gradient(180deg, #3980FD 0%, #3980FD 0.01%, #6692DB 100%);;
+$base-color: linear-gradient(180deg, #3980FD 0%, #3980FD 0.01%, #6692DB 100%);
 
 .Sidebar{
     background:$base-color;
