--- a/neiro-module/src/index.css
+++ b/neiro-module/src/index.css
@@ -9,7 +9,15 @@ body {
   overflow: hidden;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,h2,h3,h4,h5,h6,p {
   margin: 0;
   padding: 0;
+}
+
+.main_page{
+  display: flex;
+
+}
+.main_content{
+  width: 80%;
 }
